Be strict about the supported versions of Django.

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ deps =
     dev,record: Django>=1.11,<1.12
     django111: Django>=1.11,<1.12
     django20: Django>=2.0,<2.1
+    django21: Django>=2.1,<2.2
     django-latest: https://github.com/django/django/archive/master.tar.gz
 commands =
     python example_project/manage.py test --settings=test_settings {posargs:postorius}
