Fix pep8 errors for new versions of flake8.
Ignoring W504, since I don't think it improves readability and trying to conform
to it makes the code look weird. Fix another error for W605.

--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,6 @@ commands =
 
 
 [flake8]
-ignore = E123, E133
+ignore = E123, E133, W504
 show-source = True
 exclude = .git,.tox,dist,*egg,src/postorius/doc,example_project
