--- a/src/postorius/tests/fixtures/vcr_cassettes/ListMembersTest.test_search_members_1.yaml
+++ b/src/postorius/tests/fixtures/vcr_cassettes/ListMembersTest.test_search_members_1.yaml
@@ -47,12 +47,12 @@ interactions:
     method: GET
     uri: http://localhost:9001/3.0/lists/foo.example.com
   response:
-    body: {string: '{"display_name": "Foo", "fqdn_listname": "foo@example.com", "http_etag":
-        "\"698a819bbb6b902096a8c5543cc7fac2328960d5\"", "list_id": "foo.example.com",
+    body: {string: '{"description": "", "display_name": "Foo", "fqdn_listname": "foo@example.com",
+        "http_etag": "\"490ba5a3f1642771810284491327932ca01ce4f2\"", "list_id": "foo.example.com",
         "list_name": "foo", "mail_host": "example.com", "member_count": 0, "self_link":
         "http://localhost:9001/3.0/lists/foo.example.com", "volume": 1}'}
     headers:
-      content-length: ['294']
+      content-length: ['313']
       content-type: [application/json; charset=UTF-8]
     status: {code: 200, message: OK}
 - request:
@@ -67,7 +67,7 @@ interactions:
     headers:
       content-length: ['0']
       content-type: [application/json; charset=UTF-8]
-      location: ['http://localhost:9001/3.0/members/684']
+      location: ['http://localhost:9001/3.0/members/1']
     status: {code: 201, message: Created}
 - request:
     body: display_name=None&list_id=foo.example.com&pre_approved=True&pre_confirmed=True&pre_verified=True&subscriber=member-2%40example.com
@@ -81,7 +81,7 @@ interactions:
     headers:
       content-length: ['0']
       content-type: [application/json; charset=UTF-8]
-      location: ['http://localhost:9001/3.0/members/685']
+      location: ['http://localhost:9001/3.0/members/2']
     status: {code: 201, message: Created}
 - request:
     body: null
@@ -90,12 +90,12 @@ interactions:
     method: GET
     uri: http://localhost:9001/3.1/lists/foo@example.com
   response:
-    body: {string: '{"display_name": "Foo", "fqdn_listname": "foo@example.com", "http_etag":
-        "\"3732e708cbbb0955b4088781928353799722714a\"", "list_id": "foo.example.com",
+    body: {string: '{"description": "", "display_name": "Foo", "fqdn_listname": "foo@example.com",
+        "http_etag": "\"96ac2c6b08de9392c4ce4cb92609626bc3361a6b\"", "list_id": "foo.example.com",
         "list_name": "foo", "mail_host": "example.com", "member_count": 2, "self_link":
         "http://localhost:9001/3.1/lists/foo.example.com", "volume": 1}'}
     headers:
-      content-length: ['294']
+      content-length: ['313']
       content-type: [application/json; charset=UTF-8]
     status: {code: 200, message: OK}
 - request:
@@ -103,7 +103,7 @@ interactions:
     headers:
       accept-encoding: ['gzip, deflate']
     method: GET
-    uri: http://localhost:9001/3.1/members/find?count=0&list_id=foo.example.com&page=1&role=member&subscriber=%2Aexample.com%2A
+    uri: http://localhost:9001/3.1/members/find?count=0&list_id=foo.example.com&page=1&subscriber=%2Aexample.com%2A
   response:
     body: {string: '{"http_etag": "\"f14dfdb06627a6336a504885e036239a5b208434\"",
         "start": 0, "total_size": 2}'}
@@ -116,21 +116,21 @@ interactions:
     headers:
       accept-encoding: ['gzip, deflate']
     method: GET
-    uri: http://localhost:9001/3.1/members/find?count=25&list_id=foo.example.com&page=1&role=member&subscriber=%2Aexample.com%2A
+    uri: http://localhost:9001/3.1/members/find?count=25&list_id=foo.example.com&page=1&subscriber=%2Aexample.com%2A
   response:
     body: {string: '{"entries": [{"address": "http://localhost:9001/3.1/addresses/member-1@example.com",
         "delivery_mode": "regular", "display_name": "None", "email": "member-1@example.com",
-        "http_etag": "\"0f32bcce4c3c85112d336623615c6769d8c023e2\"", "list_id": "foo.example.com",
-        "member_id": "000000000000000000000000000002ac", "role": "member", "self_link":
-        "http://localhost:9001/3.1/members/000000000000000000000000000002ac", "user":
-        "http://localhost:9001/3.1/users/00000000000000000000000000000378"}, {"address":
+        "http_etag": "\"69e736484db91736cbecc4b0ee65d971cefba5ad\"", "list_id": "foo.example.com",
+        "member_id": "00000000000000000000000000000001", "role": "member", "self_link":
+        "http://localhost:9001/3.1/members/00000000000000000000000000000001", "user":
+        "http://localhost:9001/3.1/users/00000000000000000000000000000001"}, {"address":
         "http://localhost:9001/3.1/addresses/member-2@example.com", "delivery_mode":
         "regular", "display_name": "None", "email": "member-2@example.com", "http_etag":
-        "\"6d5cf72df45302753e46ee4b0396790475bfcead\"", "list_id": "foo.example.com",
-        "member_id": "000000000000000000000000000002ad", "role": "member", "self_link":
-        "http://localhost:9001/3.1/members/000000000000000000000000000002ad", "user":
-        "http://localhost:9001/3.1/users/00000000000000000000000000000379"}], "http_etag":
-        "\"b1cac4f4fda0b0a410963d14720081322823457f\"", "start": 0, "total_size":
+        "\"57dea239d415478ae931bfc9cf604f845adf9c54\"", "list_id": "foo.example.com",
+        "member_id": "00000000000000000000000000000002", "role": "member", "self_link":
+        "http://localhost:9001/3.1/members/00000000000000000000000000000002", "user":
+        "http://localhost:9001/3.1/users/00000000000000000000000000000002"}], "http_etag":
+        "\"2e24052c73c4cd8fa462ce3e165fd465bdbf7496\"", "start": 0, "total_size":
         2}'}
     headers:
       content-length: ['1053']
@@ -141,15 +141,15 @@ interactions:
     headers:
       accept-encoding: ['gzip, deflate']
     method: GET
-    uri: http://localhost:9001/3.0/members/684
+    uri: http://localhost:9001/3.0/members/1
   response:
     body: {string: '{"address": "http://localhost:9001/3.0/addresses/member-1@example.com",
         "delivery_mode": "regular", "display_name": "None", "email": "member-1@example.com",
-        "http_etag": "\"8350f904e818822bd26d4fb7ee233c05c9475e8e\"", "list_id": "foo.example.com",
-        "member_id": 684, "role": "member", "self_link": "http://localhost:9001/3.0/members/684",
-        "user": "http://localhost:9001/3.0/users/888"}'}
+        "http_etag": "\"cbac58bfeb5bd37193ff95980e469defdfb35f0c\"", "list_id": "foo.example.com",
+        "member_id": 1, "role": "member", "self_link": "http://localhost:9001/3.0/members/1",
+        "user": "http://localhost:9001/3.0/users/1"}'}
     headers:
-      content-length: ['384']
+      content-length: ['378']
       content-type: [application/json; charset=UTF-8]
     status: {code: 200, message: OK}
 - request:
@@ -157,15 +157,15 @@ interactions:
     headers:
       accept-encoding: ['gzip, deflate']
     method: GET
-    uri: http://localhost:9001/3.0/members/685
+    uri: http://localhost:9001/3.0/members/2
   response:
     body: {string: '{"address": "http://localhost:9001/3.0/addresses/member-2@example.com",
         "delivery_mode": "regular", "display_name": "None", "email": "member-2@example.com",
-        "http_etag": "\"36aca9e027b20c5470d4cdb013f4d0ad2b92940f\"", "list_id": "foo.example.com",
-        "member_id": 685, "role": "member", "self_link": "http://localhost:9001/3.0/members/685",
-        "user": "http://localhost:9001/3.0/users/889"}'}
+        "http_etag": "\"8e15e58113da679d83bda36b053d0d5d7de94d0a\"", "list_id": "foo.example.com",
+        "member_id": 2, "role": "member", "self_link": "http://localhost:9001/3.0/members/2",
+        "user": "http://localhost:9001/3.0/users/2"}'}
     headers:
-      content-length: ['384']
+      content-length: ['378']
       content-type: [application/json; charset=UTF-8]
     status: {code: 200, message: OK}
 - request:
@@ -175,12 +175,12 @@ interactions:
     method: GET
     uri: http://localhost:9001/3.1/lists/foo@example.com
   response:
-    body: {string: '{"display_name": "Foo", "fqdn_listname": "foo@example.com", "http_etag":
-        "\"3732e708cbbb0955b4088781928353799722714a\"", "list_id": "foo.example.com",
+    body: {string: '{"description": "", "display_name": "Foo", "fqdn_listname": "foo@example.com",
+        "http_etag": "\"96ac2c6b08de9392c4ce4cb92609626bc3361a6b\"", "list_id": "foo.example.com",
         "list_name": "foo", "mail_host": "example.com", "member_count": 2, "self_link":
         "http://localhost:9001/3.1/lists/foo.example.com", "volume": 1}'}
     headers:
-      content-length: ['294']
+      content-length: ['313']
       content-type: [application/json; charset=UTF-8]
     status: {code: 200, message: OK}
 - request:
@@ -188,7 +188,7 @@ interactions:
     headers:
       accept-encoding: ['gzip, deflate']
     method: GET
-    uri: http://localhost:9001/3.1/members/find?count=0&list_id=foo.example.com&page=1&role=member&subscriber=%2Amember-1%2A
+    uri: http://localhost:9001/3.1/members/find?count=0&list_id=foo.example.com&page=1&subscriber=%2Amember-1%2A
   response:
     body: {string: '{"http_etag": "\"b21094769c757b95dc05bd978b7e78fabe490b0c\"",
         "start": 0, "total_size": 1}'}
@@ -201,15 +201,15 @@ interactions:
     headers:
       accept-encoding: ['gzip, deflate']
     method: GET
-    uri: http://localhost:9001/3.1/members/find?count=25&list_id=foo.example.com&page=1&role=member&subscriber=%2Amember-1%2A
+    uri: http://localhost:9001/3.1/members/find?count=25&list_id=foo.example.com&page=1&subscriber=%2Amember-1%2A
   response:
     body: {string: '{"entries": [{"address": "http://localhost:9001/3.1/addresses/member-1@example.com",
         "delivery_mode": "regular", "display_name": "None", "email": "member-1@example.com",
-        "http_etag": "\"0f32bcce4c3c85112d336623615c6769d8c023e2\"", "list_id": "foo.example.com",
-        "member_id": "000000000000000000000000000002ac", "role": "member", "self_link":
-        "http://localhost:9001/3.1/members/000000000000000000000000000002ac", "user":
-        "http://localhost:9001/3.1/users/00000000000000000000000000000378"}], "http_etag":
-        "\"4d63fa9ac2d79a53c96ed382f3de1d0ec12bbb7c\"", "start": 0, "total_size":
+        "http_etag": "\"69e736484db91736cbecc4b0ee65d971cefba5ad\"", "list_id": "foo.example.com",
+        "member_id": "00000000000000000000000000000001", "role": "member", "self_link":
+        "http://localhost:9001/3.1/members/00000000000000000000000000000001", "user":
+        "http://localhost:9001/3.1/users/00000000000000000000000000000001"}], "http_etag":
+        "\"efa51b6bdb190de6c892e4b244290eab1c50ec6a\"", "start": 0, "total_size":
         1}'}
     headers:
       content-length: ['578']
@@ -222,12 +222,12 @@ interactions:
     method: GET
     uri: http://localhost:9001/3.1/lists/foo@example.com
   response:
-    body: {string: '{"display_name": "Foo", "fqdn_listname": "foo@example.com", "http_etag":
-        "\"3732e708cbbb0955b4088781928353799722714a\"", "list_id": "foo.example.com",
+    body: {string: '{"description": "", "display_name": "Foo", "fqdn_listname": "foo@example.com",
+        "http_etag": "\"96ac2c6b08de9392c4ce4cb92609626bc3361a6b\"", "list_id": "foo.example.com",
         "list_name": "foo", "mail_host": "example.com", "member_count": 2, "self_link":
         "http://localhost:9001/3.1/lists/foo.example.com", "volume": 1}'}
     headers:
-      content-length: ['294']
+      content-length: ['313']
       content-type: [application/json; charset=UTF-8]
     status: {code: 200, message: OK}
 - request:
@@ -235,7 +235,7 @@ interactions:
     headers:
       accept-encoding: ['gzip, deflate']
     method: GET
-    uri: http://localhost:9001/3.1/members/find?count=0&list_id=foo.example.com&page=1&role=member&subscriber=%2Anot_a_member%2A
+    uri: http://localhost:9001/3.1/members/find?count=0&list_id=foo.example.com&page=1&subscriber=%2Anot_a_member%2A
   response:
     body: {string: '{"http_etag": "\"32223434a0f3af4cdc4673d1fbc5bac1f6d98fd3\"",
         "start": 0, "total_size": 0}'}
@@ -248,7 +248,7 @@ interactions:
     headers:
       accept-encoding: ['gzip, deflate']
     method: GET
-    uri: http://localhost:9001/3.1/members/find?count=25&list_id=foo.example.com&page=1&role=member&subscriber=%2Anot_a_member%2A
+    uri: http://localhost:9001/3.1/members/find?count=25&list_id=foo.example.com&page=1&subscriber=%2Anot_a_member%2A
   response:
     body: {string: '{"http_etag": "\"32223434a0f3af4cdc4673d1fbc5bac1f6d98fd3\"",
         "start": 0, "total_size": 0}'}
@@ -285,12 +285,12 @@ interactions:
     method: GET
     uri: http://localhost:9001/3.1/lists/foo@example.com
   response:
-    body: {string: '{"display_name": "Foo", "fqdn_listname": "foo@example.com", "http_etag":
-        "\"4fb667c3d533cf6b2b6faa284a0d5d1302536524\"", "list_id": "foo.example.com",
+    body: {string: '{"description": "", "display_name": "Foo", "fqdn_listname": "foo@example.com",
+        "http_etag": "\"0c03b5f44b6fe77375f8f14c2dbe4e2d0219d704\"", "list_id": "foo.example.com",
         "list_name": "foo", "mail_host": "example.com", "member_count": 0, "self_link":
         "http://localhost:9001/3.1/lists/foo.example.com", "volume": 1}'}
     headers:
-      content-length: ['294']
+      content-length: ['313']
       content-type: [application/json; charset=UTF-8]
     status: {code: 200, message: OK}
 - request:
@@ -298,7 +298,7 @@ interactions:
     headers:
       accept-encoding: ['gzip, deflate']
     method: GET
-    uri: http://localhost:9001/3.1/members/find?count=0&list_id=foo.example.com&page=1&role=member&subscriber=%2Amember-1%2A
+    uri: http://localhost:9001/3.1/members/find?count=0&list_id=foo.example.com&page=1&subscriber=%2Amember-1%2A
   response:
     body: {string: '{"http_etag": "\"32223434a0f3af4cdc4673d1fbc5bac1f6d98fd3\"",
         "start": 0, "total_size": 0}'}
@@ -311,7 +311,7 @@ interactions:
     headers:
       accept-encoding: ['gzip, deflate']
     method: GET
-    uri: http://localhost:9001/3.1/members/find?count=25&list_id=foo.example.com&page=1&role=member&subscriber=%2Amember-1%2A
+    uri: http://localhost:9001/3.1/members/find?count=25&list_id=foo.example.com&page=1&subscriber=%2Amember-1%2A
   response:
     body: {string: '{"http_etag": "\"32223434a0f3af4cdc4673d1fbc5bac1f6d98fd3\"",
         "start": 0, "total_size": 0}'}
