Run dependency tests using specific commit sha of Client.
This adds support for multi-project testing, which will trigger Pipelines force
 every commits in project dependncies. Core triggers Client. Client triggers
 Postorius, Hyperkitty and Django-Mailman3. Django-Mailman3 trigger Postorius
 and Hyperkitty.

This commit changes versions of Django used in all different tests to be < 2.2.

--- a/tox.ini
+++ b/tox.ini
@@ -23,14 +23,28 @@ setenv =
     record: POSTORIUS_VCR_RECORD_MODE = all
 
 
+[testenv:upstream-client]
+basepython = python3.7
+deps =
+  Django>=2.1,<2.2
+  {[testenv]deps}
+  git+https://gitlab.com/mailman/mailmanclient.git@{env:MAILMANCLIENT_COMMIT_SHA}
+
+
+[testenv:upstream-django-mailman3]
+basepython = python3.7
+deps =
+  Django>=2.1,<2.2
+  {[testenv]deps}
+  git+https://gitlab.com/mailman/django-mailman3.git@{env:DJANGO_MAILMAN3_COMMIT_SHA}
+
+
 [testenv:coverage]
 basepython = python3
 deps =
-    mock
-    vcrpy
+    Django>=2.1,<2.2
+    {[testenv]deps}
     coverage
-    beautifulsoup4
-    Django>=1.11,<1.12
 commands =
     coverage: coverage run example_project/manage.py test --settings=test_settings {posargs:postorius}
     coverage: coverage html
@@ -41,7 +55,7 @@ commands =
 basepython = python3
 deps =
     flake8
-    Django>1.11,<1.12
+    Django>1.11,<2.2
 commands =
     flake8 {posargs}
 
