--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,6 +57,7 @@ pep8:
 
 git-heads:
   stage: test
+  allow_failure: true
   script:
   - tox -e py36-head
 
@@ -65,6 +66,22 @@ django-latest:
   allow_failure: true
   script:
     - tox -e py36-django-latest
+
+upstream-client:
+  stage: test
+  script:
+    - tox -e upstream-client
+  only:
+    variables:
+      - $MAILMANCLIENT_COMMIT_SHA
+
+upstream-django-mailman3:
+  stage: test
+  script:
+    - tox -e upstream-django-mailman3
+  only:
+    variables:
+      - $DJANGO_MAILMAN3_COMMIT_SHA
 
 pages:
   stage: deploy
