Allow setting moderation for a held message's sender.
This allows moderating a held message and setting it's moderation action at the
same time.

It is a common practice to remove the moderation bit for senders on their first
post to a mailing list, this should make it relatively much easier to do that.

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,9 @@ commands =
     python example_project/manage.py test --settings=test_settings {posargs:postorius}
 setenv =
     PYTHONPATH = {toxinidir}
-    record: POSTORIUS_VCR_RECORD_MODE = all
+
+[testenv:record]
+setenv = POSTORIUS_VCR_RECORD_MODE = all
 
 
 [testenv:upstream-client]
