--- a/tox.ini
+++ b/tox.ini
@@ -58,8 +58,10 @@ basepython = python3
 deps =
     flake8
     Django>1.11,<2.2
+		isort
 commands =
     flake8 {posargs}
+    python setup.py isort
 
 
 [flake8]
@@ -67,3 +69,16 @@ basepython = python3
 ignore = E123, E133, W504
 show-source = True
 exclude = .git,.tox,dist,*egg,src/postorius/doc,example_project
+
+
+[isort]
+line_length=79
+multi_line_output=4
+balanced_wrapping=True
+known_django=django
+sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+no_lines_before=LOCALFOLDER
+lines_after_imports=2
+use_paranthesis=True
+default_section=THIRDPARTY
+known_first_party=postorius
