Fix HTML coverage report caching using Gitlab Pages.
Also, fix some warnings in Django.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,7 +98,7 @@ pages:
   dependencies:
   - coverage
   script:
-  - mv coverage/ public/
+  - mv example_project/htmlcov/ public/
   artifacts:
     paths:
     - public
