--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,6 +51,11 @@ py37-django-22:
   script:
     - tox -e py37-django22
 
+py38-django-22:
+  stage: test
+  script:
+    - tox -e py38-django22
+
 coverage:
   stage: test
   script:
