--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,6 +51,21 @@ py37-django-22:
   script:
     - tox -e py37-django22
 
+py36-django-30:
+  stage: test
+  script:
+    - tox -e py36-django30
+
+py37-django-30:
+  stage: test
+  script:
+    - tox -e py37-django30
+
+py38-django-30:
+  stage: test
+  script:
+    - tox -e py38-django30
+
 py38-django-22:
   stage: test
   script:
