Expose more options in the List Settings.
- Unsubscription Policy
- Process Bounce and related settings.
- accept/reject/hold/discard_these_nonmembers
- Personalize
- Usenet related settings

--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,9 @@ changedir = {toxinidir}/example_project
 deps =
     mock
     beautifulsoup4
-    mailman
+    git+https://gitlab.com/mailman/mailman@master
     pytest
     pytest-django
-    importlib_resources<1.1.0
     head: git+https://gitlab.com/mailman/mailmanclient.git
     head: git+https://gitlab.com/mailman/django-mailman3.git
     dev: -e../mailmanclient
