--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     mock
     beautifulsoup4
     git+https://gitlab.com/mailman/mailmanclient@master
-    mailman
+	git+https://gitlab.com/mailman/mailman@master
     pytest
     pytest-django
     head: git+https://gitlab.com/mailman/mailmanclient.git
