set default values

--- a/mailman.cfg
+++ b/mailman.cfg
@@ -13,11 +13,13 @@
 # recipient: your.address@your.domain
 
 [paths.custom]
-var_dir: ~/opt/mailman/var
+# change-this-on-your-production-server (/my/home/folder)
+var_dir: /my/home/folder/opt/mailman/var
 
 [database]
 class: mailman.database.mysql.MySQLDatabase
 # replace %user%, %password% and %database% accordingly
+# change-this-on-your-production-server
 url: mysql+pymysql://%user%:%password%@localhost/%database%?charset=utf8&use_unicode=1
 
 [mailman]
@@ -40,6 +42,7 @@ pre_hook: brandwerder_plugin.hooks.pre_hook
 post_hook: brandwerder_plugin.hooks.post_hook
 
 # new plugin as of mailman 3.2 (not yet stable)
+# IMPORTANT: do a symlink of the brandwerder_plugin into site_packages
 [plugin.brandwerder_plugin]
 # Plugin configuration section template.
 #
